tests/dependencies/blob_from_type.sy
from std use (unsafe_force)

B :: blob {
    b: int,
}

X :: blob {
    b: B,
}

a: X = unsafe_force(1)

start :: fn do
    a.b.b = 1
end

// error: #ValueError(_, _)
